--- a/Mendota_Pexternal_inflow.Rmd
+++ b/Mendota_Pexternal_inflow.Rmd
@@ -5,11 +5,14 @@ date: '2023-03-06'
 output:
   html_document: default
   pdf_document: default
+editor_options: 
+  chunk_output_type: console
 ---
 
-The purpose of this program is to process and calculate the external P loading
-to Lake Mendota, from the three main inflows, Pheasant Branch (1), Yahara River 
-(2), and Six-Mile Creek (3). 
+The purpose of this program is to calculate the external total P loading
+to Lake Mendota, from the three main inflows of Pheasant Branch (PB), Yahara 
+River (YR), and Six-Mile Creek (SMC). 
+P_inflow = P concentration * flow rate
 
 
 # Step 1. Load the data and packages needed:
@@ -18,6 +21,7 @@ a) Loading the packages needed...
 
 ```{r}
 library(dplyr) #needed for transforming data
+library(reshape2) #needed for transforming data wide to long
 library(lubridate) #needed for date conversion functions
 library(ggplot2) #needed for plotting
 ```
@@ -31,13 +35,9 @@ b) Loading the data needed...
 PB_TotP_flow<- read.csv(file="Cleaned_data/Inflow_PheasantBranch_TotP.csv")
 YR_TotP_flow<- read.csv(file="Cleaned_data/YaharaRiver_TotP_combined.csv")
 SMC_TotP_flow<- read.csv(file="Cleaned_data/Inflow_SixMileCreek_TotP.csv")
-
-PB_SRP_flow<- read.csv(file="Cleaned_data/Inflow_PheasantBranch_SRP.csv")
-YR_SRP_flow<- read.csv(file="Cleaned_data/YaharaRiver_DissP_combined.csv")
-SMC_SRP_flow<- read.csv(file="Cleaned_data/Inflow_SixMileCreek_SRP.csv")
 ```
 
-Data loaded.
+Total P data loaded.
 
 The site ID and source for Pheasant Branch is `r unique(PB_TotP_flow$Site_ID)`.
 The site ID and source for Yahara River is `r unique(YR_TotP_flow$Site_ID)`.
@@ -45,16 +45,22 @@ The site ID and source for Six-mile Creek is `r unique(SMC_TotP_flow$Site_ID)`.
 Note, there are two sites, one with historic data and one with current data, for
 Six-mile Creek.
 
-# Step 2. Transform and merge the data:
+# Step 2. Transform and filter the data:
 
-a) transforming the data...
+a) defining conversion coefficients...
 
 ```{r}
 lb_kg= 0.453592/1 #conversion factor from lb to kg (1lb = 0.453592 kg)
 cf_L= 1/0.0353147 #conversion factor from ft^3 to L (1 ft^2 = 28.3168 L)
 sec_day= 86400/1 #conversion factor from sec to day (86400 sec = 1 day)
 mg_kg= 1/1000000 #conversion factor from mg to kg (1,000,000 mg = 1 kg)
+```
 
+Conversion coefficients defined.
+
+b) transforming and filtering the data...
+
+```{r}
 PB_TotP_flow<- PB_TotP_flow %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30", format="%m/%d/%Y"),
          Q_cfs=Qout_cfs, #rename column for consistency across data frames
@@ -72,73 +78,11 @@ SMC_TotP_flow<- SMC_TotP_flow %>%
          TotP_kgday=(Q_cfs*TotP_mgL*cf_L*sec_day*mg_kg)
          )%>%
   filter(Q_cfs>=0) #remove any records where there is a negative flow rate
-
-PB_SRP_flow<- PB_SRP_flow %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30", format="%m/%d/%Y"),
-         Q_cfs=Qout_cfs, #rename column for consistency across data frames
-         Qout_cfs=NULL, #remove excess column
-         SRP_kgday=(Q_cfs*SRP_mgL*cf_L*sec_day*mg_kg)
-         ) %>%
-  filter(Q_cfs>=0) #remove any records where there is a negative flow rate
-YR_SRP_flow<- YR_SRP_flow %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30", format="%m/%d/%Y"),
-         SRP_kgday=(Q_cfs*SRP_mgL*cf_L*sec_day*mg_kg)
-         )%>%
-  filter(Q_cfs>=0) #remove any records where there is a negative flow rate
-SMC_SRP_flow<- SMC_SRP_flow %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30", format="%m/%d/%Y"),
-         SRP_kgday=(Q_cfs*SRP_mgL*cf_L*sec_day*mg_kg)
-         )%>%
-  filter(Q_cfs>=0) #remove any records where there is a negative flow rate
 ```
 
-Data transformed.
+Total P data transformed and filtered for all inflows.
 
-b) Merging the data:
-
-```{r}
-PB_TotP_flow <- PB_TotP_flow %>%
-  mutate(Inflow="Pheasant Branch") #add column with name of inflow
-YR_TotP_flow <- YR_TotP_flow %>%
-  mutate(Inflow="Yahara River") #add column with name of inflow
-SMC_TotP_flow <- SMC_TotP_flow %>%
-  mutate(Inflow="Six-mile Creek") #add column with name of inflow
-
-Inflows<- merge(PB_TotP_flow, YR_TotP_flow, #merge two data frames
-                all=TRUE) #keep all records for both data frames
-Inflows<- merge(Inflows, SMC_TotP_flow, #merge two data frames
-                all=TRUE) #keep all records for both data frames                
-Inflows<- Inflows %>%
-  mutate(Site_ID=NULL, #remove excess column
-         Source_ID=NULL, #remove excess column
-         daynum=as.integer(format(sampledate, format="%j")), #add column with 
-         #daynum for filtering
-         Yr=as.integer(format(sampledate, format="%Y"))) 
-
-PB_SRP_flow <- PB_SRP_flow %>%
-  mutate(Inflow="Pheasant Branch") #add column with name of inflow
-YR_SRP_flow <- YR_SRP_flow %>%
-  mutate(Inflow="Yahara River") #add column with name of inflow
-SMC_SRP_flow <- SMC_SRP_flow %>%
-  mutate(Inflow="Six-mile Creek") #add column with name of inflow
-
-Inflows<- merge(PB_SRP_flow, YR_SRP_flow, #merge two data frames
-                all=TRUE) #keep all records for both data frames
-Inflows<- merge(Inflows, SMC_SRP_flow, #merge two data frames
-                all=TRUE) #keep all records for both data frames                
-Inflows<- Inflows %>%
-  mutate(Site_ID=NULL, #remove excess column
-         Source_ID=NULL, #remove excess column
-         daynum=as.integer(format(sampledate, format="%j")), #add column with 
-         #daynum for filtering
-         Yr=as.integer(format(sampledate, format="%Y")))
-```
-
-The three data frames are merged.
-
-# Step 3. View and summarize the data:
-
-a) viewing data available for each of the inflows...
+c) viewing data available...
 
 ```{r}
 layout(matrix(c(1,2,3),3,1)) # optional 3 graphs/page
@@ -152,23 +96,121 @@ plot(SMC_TotP_flow$sampledate, SMC_TotP_flow$TotP_kgday,
      xlab = "Sample Date", ylab = "Total P Loading (kg/day)", 
      main = "Six-Mile Creek", cex.lab=1.5, cex.main=2, cex.axis=2)
 par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
-
-layout(matrix(c(1,2,3),3,1)) # optional 3 graphs/page
-plot(PB_SRP_flow$sampledate, PB_SRP_flow$SRP_kgday, 
-     xlab = "Sample Date", ylab = "SRP Loading (kg/day)", 
-     main = "Pheasant Branch", cex.lab=1.5, cex.main=2, cex.axis=2)
-plot(YR_TotP_flow$sampledate, YR_TotP_flow$TotP_kgday, 
-     xlab = "Sample Date", ylab = "Total P Loading (kg/day)", 
-     main = "Yahara River", cex.lab=1.5, cex.main=2, cex.axis=2)
-plot(SMC_TotP_flow$sampledate, SMC_TotP_flow$TotP_kgday, 
-     xlab = "Sample Date", ylab = "Total P Loading (kg/day)", 
-     main = "Six-Mile Creek", cex.lab=1.5, cex.main=2, cex.axis=2)
-par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
-
-
 ```
 
-Data available for all three inflows from 2012 to 2022.
+Total P data plotted. Total P available for all three inflows from 2012 to 2022.
+
+# Step 3. Interpolate data between observations to get daily loads: 
+
+a) interpolating data for PB inflow using linear regression...
+
+```{r}
+date_range<- seq( #creates a vector of sequence data
+  min(PB_TotP_flow$sampledate), #starting at the first sample date
+  max(PB_TotP_flow$sampledate), #ending at the last sample date
+  by="1 day") #observations every 1 day
+interpolated<- approx( #creates a vector of data that linearly interpolates 
+  PB_TotP_flow$sampledate, #across date
+  PB_TotP_flow$TotP_kgday, #the predicted values of total P
+  xout=date_range) #for every 1 day
+PB_TotP_flow_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #measurements every 1 day
+                             TotP_kgday=interpolated$y) #predicted total P 
+```
+
+Total P loading interpreted for Pheasant Branch.
+
+b) interpolating data for YR inflow using linear regression...
+
+```{r}
+date_range<- seq( #creates a vector of sequence data
+  min(YR_TotP_flow$sampledate), #starting at the first sample date
+  max(YR_TotP_flow$sampledate), #ending at the last sample date
+  by="1 day") #observations every 14 days (bimonthly) 
+interpolated<- approx( #creates a vector of data that linearly interpolates 
+  YR_TotP_flow$sampledate, #across date
+  YR_TotP_flow$TotP_kgday, #the predicted values of Hypo P: Epi P
+  xout=date_range) #for every 1 day
+YR_TotP_flow_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #measurements every 14 days
+                             TotP_kgday=interpolated$y) #predicted hypo: epi P 
+```
+
+Total P loading interpolated for Yahara River.
+
+c) interpolating data for SMC inflow using linear regression...
+
+```{r}
+date_range<- seq( #creates a vector of sequence data
+  min(SMC_TotP_flow$sampledate), #starting at the first sample date
+  max(SMC_TotP_flow$sampledate), #ending at the last sample date
+  by="1 day") #observations every 14 days (bimonthly) 
+interpolateonend<- approx( #creates a vector of data that linearly interpolates 
+  SMC_TotP_flow$sampledate, #across date
+  SMC_TotP_flow$TotP_kgday, #the predicted values of Hypo P: Epi P
+  xout=date_range) #for every 1 day
+SMC_TotP_flow_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #measurements every 14 days
+                             TotP_kgday=interpolated$y) #predicted hypo: epi P 
+```
+
+Total P loading interpolated for Six-mile Creek.
+
+# Step 4. Merge the data:
+Note, R only merges two data frames at a time.
+
+a) merging data files...
+
+```{r}
+Inflows<- merge(PB_TotP_flow_interp, YR_TotP_flow_interp, #merge the two files
+                by="sampledate") #keep records with same sample date
+Inflows<- Inflows %>%
+  mutate(PB_TotP_kgday=TotP_kgday.x, #rename the column with inflow name
+         TotP_kgday.x=NULL, #remove duplicate column
+         YR_TotP_kgday=TotP_kgday.y, #rename column with inflow name
+         TotP_kgday.y=NULL #remove duplicate column
+         ) 
+Inflows<- merge(Inflows, SMC_TotP_flow_interp, #merge two data frames
+                by="sampledate") #keep records with same sample date
+Inflows<- Inflows %>%
+  mutate(SMC_TotP_kgday=TotP_kgday, #rename the column with inflow name
+         TotP_kgday=NULL) #remove duplicate column
+```
+
+Total P data files merged into one file, "Inflows."
+
+b) reshape the data frame and rename columns...
+
+```{r}
+Inflows<- melt(Inflows, #the table you want to reshape wide to long
+               id.vars=c("sampledate"), #the column to use as unique id
+               measure.vars=c("PB_TotP_kgday","YR_TotP_kgday","SMC_TotP_kgday"), 
+               #the columns where values will be taken
+               variable.name="Inflow",
+               value.name="TotP_kgday"
+               )
+Inflows$Inflow<-as.character(Inflows$Inflow) #tell R character data held
+Inflows$Inflow[Inflows$Inflow=="PB_TotP_kgday"] <- "Pheasant Branch"
+Inflows$Inflow[Inflows$Inflow=="YR_TotP_kgday"] <- "Yahara River"
+Inflows$Inflow[Inflows$Inflow=="SMC_TotP_kgday"] <- "Six-mile Creek"
+```
+
+Data frame reshaped wide to long and columns renamed.
+
+c) removing any NAs and adding time columns...
+
+```{r}
+Inflows<- Inflows %>%
+  filter(!is.na(TotP_kgday)) %>% #remove records that have NA
+  mutate(daynum=as.integer(format(sampledate, format="%j")), #add column with 
+         #daynum for filtering
+         Yr=as.integer(format(sampledate, format="%Y")) #add column with Yr 
+         ) 
+```
+
+# Step 5. View and summarize the data:
+
+a) viewing data...
 
 ```{r}
 ggplot(data=Inflows, 
@@ -176,69 +218,95 @@ ggplot(data=Inflows,
            y=TotP_kgday)) +
   geom_line()+
   facet_wrap(~Inflow) +
-  theme_classic()+
-  labs(y="Daily Total P loading (kg/day)",
+  theme_classic(base_size=12)+
+  labs(y="Daily Stream Total P loading (kg/day)",
        x="Day of Year",
       caption="White highlight indicates CyanoHAB season, mid-July to mid-Sept.") +
-  ylim(c(0, max(Inflows$TotP_lbday))) +
+  ylim(c(0, max(Inflows$TotP_kgday))) +
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
 ```
 
-b) estimating daily average total P loading from each of the inflows plotted 
-during the CyanoHAB season...
+Graph plotted of Total P for day of year across the three inflows, for all years. 
+
+b) calculating average daily total P loading for each inflow during the CyanoHAB 
+season...
 
 ```{r}
-Inflows %>%
-  filter(daynum>= 195 & daynum <=255) %>%
-  group_by(Inflow) %>%
-  summarise(mean=mean(TotP_kgday, na.rm=TRUE),
+Inflows_avg<- Inflows %>%
+  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
+  group_by(Inflow) %>% #compute for each inflow
+  summarise(mean=mean(TotP_kgday, #average daily total P loading
+                      na.rm=TRUE),
             se=(sd(TotP_kgday, na.rm=TRUE)/sqrt(length(TotP_kgday))),
             min=min(TotP_kgday, na.rm=TRUE),
             max=max(TotP_kgday, na.rm=TRUE))
+Inflows_avg
 ```
 
-Estimated average total P loading during CyanoHAB season for each inflow.
+Estimated average daily total P loading during CyanoHAB season for each inflow.
 
-# Step 3. Combine the data into total external load from all inflows:
+c) calculating average daily total P loading for all inflows during the CyanoHAB
+season...
 
-a) combining inflow data....
 ```{r}
-Inflows_sumP<- Inflows %>% 
-  filter(Yr>=2012 & Yr<= 2022) %>% #filters for years there is data for all inflows
-  group_by(sampledate) %>% #group data from inflows by sample date...
-  summarize(TotP_kgday_sum=sum(TotP_kgday)) %>% #sum the total P loads for all three inflows
-  filter(!is.na(TotP_kgday_sum)) %>% #remove NAs 
-  filter(TotP_kgday_sum>=0) #remove any negative values
+Inflows_avgsum<- Inflows %>%
+  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
+  summarise(mean=mean(TotP_kgday,
+                      na.rm=TRUE),
+            se=(sd(TotP_kgday, na.rm=TRUE)/sqrt(length(TotP_kgday))),
+            min=min(TotP_kgday, na.rm=TRUE),
+            max=max(TotP_kgday, na.rm=TRUE))
+Inflows_avgsum
 ```
 
-Inflow data combined.
+Estimated average daily total P loading during CyanoHAB season for all inflows.
 
-b) plotting total P load by year...
+d) calculating annual total P load during CyanoHAB season...
 
 ```{r}
-Inflows_sumP_yr<- Inflows_sumP %>%
-  mutate(Yr=as.integer(format(sampledate, format="%Y"))) %>%
+Inflows_sumavg<- Inflows %>%
+  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
   group_by(Yr) %>% #group all records by year
-  summarise(sum_TP_kg=sum(TotP_kgday_sum)) #calculate the total P load 
-
-ggplot(Inflows_sumP_yr, aes(x=as.factor(Yr), y=sum_TP_kg)) +
-  geom_col() +
-  theme_classic() +
-  labs(x="Year", y="Total P loading from three inflows (kg)") 
+  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+Inflows_sumavg
 ```
 
-Total P load plotted by year.
+The average annual total P load, during the CyanoHAB season, was
+`r mean(Inflows_sumavg$sum_TP_kgyr)` +- `r sd(Inflows_sumavg$sum_TP_kgyr)/sqrt(length(Inflows_sumavg$sum_TP_kgyr))` kg/yr. 
 
-# Step 4. Save new data file.
+e) calculating annual total P load for year...
+```{r}
+Inflows_yravg<- Inflows %>%
+  group_by(Yr) %>% #group all records by year
+  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+Inflows_yravg
+```
+
+The average annual total P load, for the year, was
+`r mean(Inflows_yravg$sum_TP_kgyr)` +- `r sd(Inflows_yravg$sum_TP_kgyr)/sqrt(length(Inflows_yravg$sum_TP_kgyr))` kg/yr. 
+
+f) plotting annual total P load per year...
+```{r}
+ggplot(Inflows_yravg, aes(x=as.factor(Yr), y=sum_TP_kgyr)) +
+  geom_col() +
+  theme_classic(base_size=12) +
+  labs(x="Year", y="Total P loading from streams (kg/yr)") 
+```
+
+Total P load from streams plotted by year.
+
+# Step 6. Save new data file.
 
 ```{R}
+Inflows_sumP<- Inflows %>%
+  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
+  group_by(sampledate) %>% #for each day
+  summarize(TotP_kgday=sum(TotP_kgday))
+head(Inflows_sumP)
 write.csv(Inflows_sumP, file="Cleaned_data/Mendota_P_inflows.csv") #save as new data file
 ```
 
-The average annual total P load, from 2012 to 2022, was on average (+- SE) 
-`r mean(Inflows_sumP_yr$sum_TP_kg)` +- `r sd(Inflows_sumP_yr$sum_TP_kg)/sqrt(length(Inflows_sumP_yr$Yr))` kg/yr. 
-
-
+Data file saved as "Mendota_P_inflows.csv".
