--- a/MendotA_Modeling.Rmd
+++ b/MendotA_Modeling.Rmd
@@ -3,6 +3,8 @@ title: "Mendota_Modeling.Rmd"
 author: "Lauren A. Knose, ORISE-EPA"
 date: '2023-06-23'
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 The purpose of this program is to perform an impact analysis comparing the internal vs external loading on changes in Chl-a and CyanoDensity.
@@ -13,8 +15,9 @@ The purpose of this program is to perform an impact analysis comparing the inter
 a) Loading dependent packages...
 ```{r}
 library(ggplot2) #needed for plots
-library(ggbreak) #needed for plot scale breaks
 library(dplyr) #needed for reshaping/reformating data
+library(corrplot) #needed for correlation matrix plot
+library(ggbreak) #needed for plot scale breaks
 library(rgl) #needed to make 3D plots
 #library(xts) #needed to convert data frame to time series
 ```
@@ -24,23 +27,28 @@ Note, ensure date data is formatted in R as Date.
 
 ```{r}
 Me_algae<- read.csv(file="Cleaned_data/Mendota_Algae.csv") #read in the file with predictor variables
+Me_extLoad<- read.csv(file="Cleaned_data/Mendota_P_allext.csv")
+Me_intLoad<- read.csv(file="Cleaned_data/Mendota_P_water.csv")
+```
+
+# Step 2. Transform and merge the data: 
+
+a) transforming data...
+
+```{r}
 Me_algae<- Me_algae %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #format as date
          X=NULL) #remove extra column
-Me_extLoad<- read.csv(file="Cleaned_data/Mendota_P_allext.csv")
 Me_extLoad<- Me_extLoad %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #format as date
          X=NULL) #remove extra column
-Me_intLoad<- read.csv(file="Cleaned_data/Mendota_P_water.csv")
 Me_intLoad <- Me_intLoad %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #format as date
          X=NULL) #remove extra column
 ```
 
-# Step 2. Merge the data into one file:
+b) merging response and external loading data....
 Note, you can only merge two files at one time.
-
-a) merging response and external loading data....
 
 ```{r}
 Me_all<- merge(Me_algae, Me_extLoad, by="sampledate")
@@ -55,30 +63,33 @@ Me_all<- Me_all %>%
 ```
 
 # Step 3. Calculate lagged data:
-Note, Time series regression model assumes the time series "Y" has a linear 
-relationship with the times series "X". But, you need to subset the response 
-variable(s) to the CyanoHAB season (daynum > 195 & < 255).To do this, I need to
-make a new time series with the current chl-a and the t-k, when k = 7, 14, 30.
 
-creating a new data frame with lagged variables...
+a) creating a new data frame with lagged variables...
 
 ```{r}
-water_int_k<- transform(Me_all, HE_ratio_k=lag(HE_ratio_TotP_mgL, n=7), 
-                        #adds column with X_1, t-7 value
-                        totextP_kgday_k=lag(totextP_kgday, n=14), 
+water_int_k<- transform(Me_all, 
+                        HE_ratio_k=lag(HE_ratio_TotP_mgL, n=7), 
+                        #adds column holding value from 7 days before
+                        totextP_kgday_k=lag(extTotP_kgday, n=14), 
                         #adds column with X_2, t-14 value
                         Chla_ugL_k=lag(Chla_ugL, n=7), 
                         #adds column with Y_1, t-7 value
                         CyanoDens_cellsmL_k=lag(CyanoDens_cellsmL, n=7) 
                         #adds column with Y_2, t-7 value
 )
-water_int_k<- water_int_k %>%
-  filter(daynum < 255 & daynum > 195) #filters the data for the CyanoHAB season
 ```
 
-Lagged data computed.
+Lagged data compute and added to data frame. 
 
-# Step 4. Check data for normality to determine whether transformation needed:
+# Step 4. Save as new data file:
+
+```{r}
+write.csv(Me_all, file="Cleaned_data/Mendota_modeldata.csv")
+```
+
+Merged data file saved as "Mendota_modeldata.csv".
+
+# Step 5. Check data for normality to determine whether transformation needed:
 If data is normally distributed, then you can use simple linear regression or 
 ANOVA. If data is non-normally distributed, then you need to pick a 
 non-parametric model. The general linear model does not require 
@@ -87,215 +98,164 @@ normal-distribution.
 checking for normality...
 
 ```{r}
-hist(water_int_k$Chla_ugL, breaks=100) #prints histograph of Chl-a
+layout(matrix(c(1,2, 3, 4, 5, 6, 7, 8), #make a matrix of # rows and # columns
+              2)) 
+hist(water_int_k$Chla_ugL, breaks=50,
+     main="non-transformed",
+     xlab="Chl-a (ug/L)") #prints histograph of Chl-a
 #data right skewed
-hist(log10(water_int_k$Chla_ugL), breaks=100) #prints histograph of log10(Chl-a)
+hist(log10(water_int_k$Chla_ugL+0.01), breaks=50,
+     main="log-transformed",
+     xlab="Chl-a (ug/L)") #prints histograph of log10(Chl-a)
 #log-transform data is more normal
-hist(water_int_k$CyanoDens_cellsmL, breaks=100) #prints histograph of CD
+hist(water_int_k$CyanoDens_cellsmL, breaks=50,
+     main="non-transformed",
+     xlab="Cyano Density (cells/mL)") #prints histograph of CD
 #data right skewed
-hist(log10(water_int_k$CyanoDens_cellsmL), breaks=100) #prints histograph of log10(CD)
+hist(log10(water_int_k$CyanoDens_cellsmL), breaks=50,
+     main="log-transformed",
+     xlab="Cyano Density (cells/mL)") #prints histograph of log10(CD)
 #log-transform data is more normal
-hist(water_int_k$totextP_kgday, breaks=100) #prints hist of ext load term
+hist(water_int_k$totextP_kgday, breaks=50,
+     main="non-transformed",
+     xlab="External P loading (kg/day)") #prints hist of ext load term
 #data right skewed
-hist(log10(water_int_k$totextP_kgday), breaks=100) #prints hist of ext load term
+hist(log10(water_int_k$totextP_kgday), breaks=50,
+     main="log-transformed",
+     xlab="External P loading (kg/day)") #prints hist of ext load term
 #data more normal, but still right skewed
-hist(water_int_k$HE_ratio_TotP_mgL, breaks=100) #prints hist of int load term
+hist(water_int_k$HE_ratio_TotP_mgL, breaks=50,
+     main="non-transformed",
+     xlab="Hypo: Epi total P") #prints hist of int load term
 #data right-skewed
-hist(log10(water_int_k$HE_ratio_TotP_mgL), breaks=100) #prints hist of int load 
+hist(log10(water_int_k$HE_ratio_TotP_mgL), breaks=50,
+     main="log-transformed",
+     xlab="Hyo: Epi total P") #prints hist of int load 
 #data more normal
+par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
 ```
 
 All data is positively skewed, so both predictor and response variables 
 need to be transformed to log 10 for modeling.
 
-
-# Step 5. Perform regression:
-
-a) Run simplest model for each response variable...
-
-Chla_t = Chla_t-7 + error...
+# Step 6. Check whether variables are correlated:
 
 ```{r}
-plot(log10(water_int_k$Chla_ugL)~log10(water_int_k$Chla_ugL_k), 
-     xlab="Total Chlorophyll-a, 7 days prior (ug/L), log10-transformed",
-     ylab="Total Chlorophyll-a (ug/L), log10-transformed")
-regk1_Chla<- glm(data=na.omit(water_int_k), #removes nas
-            formula= log10(Chla_ugL+0.1)~log10(Chla_ugL_k+0.1)) #add 0.1 to avoid log10=NA
-summary(regk1_Chla) #prints the glm output
-aov(regk1_Chla) #prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk1_Chla) #prints diagnostic graphs for regression
-par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
+cor<- Me_all %>% 
+  select(CyanoDens_cellsmL, Chla_ugL, #select the columns with data needed
+         extTotP_kgday, HE_ratio_TotP_mgL) %>%
+  mutate(CD=log10(CyanoDens_cellsmL), Chla=log10(Chla_ugL+0.01), #log-transform
+         Pext=log10(extTotP_kgday), Pint=log10(HE_ratio_TotP_mgL)) %>% #data
+  mutate(CyanoDens_cellsmL=NULL, Chla_ugL=NULL, #remove columns with non-trans
+         extTotP_kgday=NULL, HE_ratio_TotP_mgL=NULL) #data
+M=cor(cor, method="kendall") #perform correlation using Kendall tau method
+corrplot(M, #plot cor matrix
+         diag=FALSE, #remove diagonal that shows corr of vars with themselves
+         outline=TRUE, #add outline around shapes to see
+         sig.level=c(0.001, 0.01, 0.05), insig='blank', #add signif stars
+         addCoef.col='black', #add corr values in black
+         type='upper') #only show upper half of matrix
 ```
 
-CD_t = CD_t-7 + error...
+# Step 7. Perform regression:
+
+a) Run first model for Chl-a...
+
+Chla_t = hypoP:epiP_t-7 + Chla_t-7 + error...
 
 ```{r}
-plot(log10(water_int_k$CyanoDens_cellsmL)~log10(water_int_k$CyanoDens_cellsmL_k), 
-     xlab="Cyanobacteria density, 7 days prior (cells/mL), log10-transformed",
-     ylab="Cyanobacteria density (cells/mL), log10-transformed")
-regk1_CD<- glm(data=na.omit(water_int_k),
-            formula=log10(CyanoDens_cellsmL)~log10(CyanoDens_cellsmL_k)) #Y_2, t-k as predictor variable
-summary(regk1_CD) #prints the glm output
-aov(regk1_CD)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk1_CD) #prints diagnostic graphs for regression
-par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
-```
-
-b) Run 2nd model for each response variable...
-
-Chla_t = hypoP:epiP_t-7 + error...
-
-```{r}
-plot(log10(water_int_k$Chla_ugL)~log10(water_int_k$HE_ratio_k), 
-     xlab="Hypo: Epi ratio of total P, 7 days before, log10-transformed",
-     ylab="Total Chlorophyll-a (ug/L), log10-transformed")
-regk2_Chla<- glm(data=na.omit(water_int_k),
-                 formula=log10(Chla_ugL+0.1)~log10(HE_ratio_k)) #X1 predictor variable
-summary(regk2_Chla) #prints the glm output
-aov(regk2_Chla)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk2_Chla) #prints diagnostic graphs for regression
-par(mfrow=c(1,1)) #returns graphing viewer to 1 plot per page
-```
-
-CD_t = hypoP:epiP_t-7 + error...
-
-```{r}
-plot(log10(water_int_k$CyanoDens_cellsmL)~log10(water_int_k$HE_ratio_k), 
-     xlab="Hypo: Epi ratio of total P, 7 days before, log10-transformed",
-     ylab="Cyanobacteria density (cells/mL), log10-transformed")
-regk2_CD<- glm(data=water_int_k,
-               formula=log10(CyanoDens_cellsmL)~log10(water_int_k$HE_ratio_k)) #X1 predictor variable
-summary(regk2_CD) #prints the glm output
-aov(regk2_CD)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk2_CD) #prints diagnostic graphs for regression
-par(mfrow=c(1,1)) #returns graphing viewer to 1 plot per page
-```
-
-c) Run 3rd model for each response variable...  
-
-Chla_t = ExtPLoad_t-14 + error...
-
-```{r}
-plot(log10(water_int_k$Chla_ugL)~log10(water_int_k$totextP_kgday_k), 
-     xlab="Total P external loading, 14 days before (kg/day), log-transformed",
-     ylab="Total Chlorophyll-a (ug/L), log-transformed")
-regk3_Chla<- glm(data=water_int_k,
-            formula=log10(Chla_ugL+0.1)~log10(totextP_kgday_k)) 
-summary(regk3_Chla) #prints the glm output
-aov(regk3_Chla)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk3_Chla) #prints diagnostic graphs for regression
-par(mfrow=c(1,1))
-```
-
-CD_t = ExtPLoad_t-14 + error...
-
-```{r}
-plot(log10(water_int_k$CyanoDens_cellsmL)~log10(water_int_k$totextP_kgday_k), 
-     xlab="Total P external loading, 14 days before (kg/day), log-transformed",
-     ylab="Cyanobacteria Density (cells/mL), log-transformed")
-regk3_CD<- glm(data=water_int_k,
-            formula=log10(CyanoDens_cellsmL)~log10(totextP_kgday_k))
-summary(regk3_CD)#prints the glm output
-aov(regk3_CD)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk3_CD) #prints diagnostic graphs for regression
-par(mfrow=c(1,1))
-```
-
-d) Run 4th model for each response variable...
-
-Chla_t = hypoP:epiP_t-7 + ExtPLoad_t-14 + error...
-
-```{r}
-regk4_Chla<- glm(formula=log10(Chla_ugL+0.1) ~ #response variable
-             log10(HE_ratio_k) + #X1 predictor variable
-              log10(totextP_kgday_k), #X2 predictor variable
+regka_Chla<- glm(formula=log10(Chla_ugL+0.01) ~ #response variable
+              log10(totextP_kgday_k) + #X1 predictor variable
+               log10(Chla_ugL_k+0.01), #Y predictor variable
               data=water_int_k) #data frame
-summary(regk4_Chla)#prints the glm output
-aov(regk4_Chla)#prints the sum of squares for the regression and residuals
+summary(regka_Chla)#prints the glm output
+aov(regka_Chla)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk4_Chla) #prints diagnostic graphs for regression
+plot(regka_Chla) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
-CD_t = hypoP:epiP_t-7 + ExtPLoad_t-14 + error...
+b) Run second model for Chl-a...
+
+Chla_t = ExtPLoad_t-14 + Chla_t-7 + hypoP:epiP_t-7 + error...
 
 ```{r}
-regk4_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
-             log10(HE_ratio_k) + #X1 predictor variable
-              log10(totextP_kgday_k), #X2 predictor variable
+regkb_Chla<- glm(formula=log10(Chla_ugL+0.01) ~ #response variable
+              log10(totextP_kgday_k) + #X1 predictor variable
+               log10(Chla_ugL_k+0.01) + #Y redictor variable
+                log10(HE_ratio_k), #X2 predictor variable, #X2 predictor variable
               data=water_int_k) #data frame
-summary(regk4_CD)
-aov(regk4_CD)
+summary(regkb_Chla)#prints the glm output
+aov(regkb_Chla)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk4_CD) #prints diagnostic graphs for regression
+plot(regkb_Chla) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
-e) Run 5th model for each response variable...
+c) Run first model for CD...
 
-Chla_t = hypoP:epiP_t-7 + ExtPLoad_t-14 + Chla_t-7 + error...
+CD_t = hypoP:epiP_t-7 + CD_t-7 + error...
 
 ```{r}
-regk5_Chla<- glm(formula=log10(Chla_ugL+0.1) ~ #response variable
-             log10(HE_ratio_k) + #X1 predictor variable
-              log10(totextP_kgday_k) +
-               log10(Chla_ugL_k+0.1), #X2 predictor variable
+regkc_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
+              log10(totextP_kgday_k) + #X1 predictor variable
+               log10(CyanoDens_cellsmL_k), #Y predictor variable
               data=water_int_k) #data frame
-summary(regk5_Chla)#prints the glm output
-aov(regk5_Chla)#prints the sum of squares for the regression and residuals
+summary(regkc_CD)#prints the glm output
+aov(regkc_CD)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk5_Chla) #prints diagnostic graphs for regression
+plot(regkc_CD) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
-CD_t = hypoP:epiP_t-7 + ExtPLoad_t-14  + CD_t-7 + error...
+b) Run second model for CD...
+
+CD_t = ExtPLoad_t-14 + Cd_t-7 + hypoP:epiP_t-7 + error...
 
 ```{r}
-regk5_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
-             log10(HE_ratio_k) + #X1 predictor variable
-              log10(totextP_kgday_k) +
-               log10(CyanoDens_cellsmL_k), #X2 predictor variable
+regkd_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
+              log10(totextP_kgday_k) + #X1 predictor variable
+               log10(CyanoDens_cellsmL_k) + #Y redictor variable
+                log10(HE_ratio_k), #X2 predictor variable, #X2 predictor variable
               data=water_int_k) #data frame
-summary(regk5_CD)
-aov(regk5_CD)
+summary(regkd_CD)#prints the glm output
+aov(regkd_CD)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk5_CD) #prints diagnostic graphs for regression
+plot(regkd_CD) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
-# Step 6. Compare the models:
+# Step 7. Compare the models:
 The model with the lowest AIC, Residual standard error, and each term is
 significant (t-score p-valu < 0.05) is the best model.
 
-# Step 7. Compare the output by year:
+# Step 8. Compare the output by year:
 
 ```{r}
-regk5_Chla<- glm(formula=log10(Chla_ugL+0.1) ~ #response variable
-             log10(HE_ratio_k) + #X1 predictor variable
-              log10(totextP_kgday_k) +#x2 predictor variable
-               log10(Chla_ugL_k+0.1), #X3 predctor variable
-              data=subset(water_int_k, Yr==2018) #data from year z
+YRregk_Chla<- glm(formula=log10(Chla_ugL+0.01) ~ #response variable
+              log10(totextP_kgday_k) + #X1 predictor variable
+               log10(Chla_ugL_k+0.01) + #Y redictor variable
+                log10(HE_ratio_k), #X2 predictor variable, #X2 predictor variable
+              data=subset(water_int_k, Yr==2012) #data from year z
              )
-aov(regk5_Chla)#prints the sum of squares for the regression and residuals
+aov(YRregk_Chla)#prints the sum of squares for the regression and residuals
 ```
+
+Results imputed into excel table for graphing.
 
 ```{r}
-regk5_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
-             log10(HE_ratio_k) + #X1 predictor variable
-              log10(totextP_kgday_k) +
-               log10(CyanoDens_cellsmL_k), #X2 predictor variable
-              data=subset(water_int_k, Yr==2018) #data frame
+YRregk_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
+             log10(totextP_kgday_k) + #X1 predictor variable
+               log10(CyanoDens_cellsmL_k) + #Y redictor variable
+                log10(HE_ratio_k), #X2 predictor variable, #X2 predictor variable
+              data=subset(water_int_k, Yr==2012) #data frame
             )
-aov(regk5_CD)
+aov(YRregk_CD)
 ```
 
-# Step 8. Making a 3D plot of the selected model:
+Results imputed into excel table for graphing.
+
+# Step 9. Making a 3D plot of the selected model:
 
 ```{r}
 mycols <- colorRampPalette( c("green", "red") )
